--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,5 +4,58 @@
 
 ## How it works?
 
+The EarthMind protocol allows any protocol to delegate their governance decisions to a network of intelligence that relies on the most advanced AI Blockchain: [Bittensor]. 
+
+At a general level, the flow is as follows:
+
+![How it works simple](/images/how-it-works-simple.jpg)
+
+Any protocol that implements the EarthMind client will delegate their governance decisions to the EarthMind network, which is a subnet in the [Bittensor] Blockchain that is securely connected via an EigenLayer AVS.
+
+For a more detailed overview, check the [LifeCycle of a Governance Request].
+
+### Components
+
+The main components of the EarthMind protocol are:
+
+- Bittensor subnet
+
+- Intelligence bridge
+
+- Ethereum Protocol
+
+- Smart contract SDK
+
+#### Bittensor subnet
+
+The subnet 31 was launched in the genesis event that took place on the 29th of August (the day of judgment).
+
+For more information about the list of miners and validators you can check our [dashboard](https://google.com).
+
+#### Intelligence bridge
+
+The intelligence bridge is the component that allows the EarthMind protocol to bridge intelligence from the Bittensor subnet to the Ethereum network in a permissionless
+and decentralized manner.
+
+The intelligence bridge is built on top of EigenLayer in order to secure the communication between Bittensor and Ethereum.
+
+#### Ethereum Protocol
+
+The EarthMind protocol deployed in Ethereum enables any protocol to delegate their governance decisions to a network of incentivised miners and validators that ensure 
+the decisions will be according to the culture set by any protocol. 
+
+For more information please check the [Smart contract integration] and the [Lifecycle of a Governance decision].
+
 ## Community and Official channels
 
+* [Official website](https://earthmind.tech)
+* [Discord](https://discord.gg/f2CBcXe3cv)
+* [Twitter](https://twitter.com/earthmind)
+* [Blog](https://blog.earthmind.tech)
+* [Github](https://github.com/earthmind)
+
+{/* Links and References */}
+
+[Bittensor]: https://bittensor.com/
+[Lifecycle of a Governance decision]: /concepts
+[Smart contract integration]: /developers/smart-contract-integration
