--- a/pages/developers/contract-addresses.mdx
+++ b/pages/developers/contract-addresses.mdx
@@ -1,6 +1,6 @@
 # Contract addresses
 
-The latest version of @earthmind/core and @earthmind/periphery are deployed at the addresses listed below. 
+The latest version of `@earthmind/core` and `@earthmind/periphery` are deployed at the addresses listed below. 
 
 | Contract | Ethereum Address | Sepolia Address |
 |----------|------------------|-----------------|
