--- a/pages/roadmap.mdx
+++ b/pages/roadmap.mdx
@@ -1,1 +1,36 @@
+import StayTuned from '../components/StayTuned';
+
 # Roadmap
+
+## Phase 1: Judgement Day
+
+### May 2024
+
+#### EarthMind Client Testnet Release
+  - Release the first version of the EarthMind client.
+  
+#### EarthMind SDK Beta Release
+  - Release the beta version of the EarthMind SDK for Smart Contract Integration.
+
+### June 2024
+
+#### Bittensor Subnet Testnet Release
+  - Launch the Bittensor subnet with a set of whitelisted miners and validators.
+
+#### EarthMind Client Beta Release
+  - Release of the beta version of the EarthMind client.
+
+### July 2024
+
+#### Intelligence Bridge Testnet Release
+  - AVS client tesnet release
+  - Permissionless Relayer release
+
+### August 2024
+
+#### Mainnet Launch
+  - The launch of EarthMind is set to be on the 28 of August of 2024, **The Judgement Day**.
+
+<br />
+
+<StayTuned />
