fixed next steps

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -95,20 +95,20 @@ In summary, EarthMind matters because it brings efficiency, security, scalabilit
 - Join our community to get support and share your progress.
 
 ### If you are a miner:
-- Read the [Mining Setup Guide] to get started.
-- Configure your mining rig to participate in the EarthMind network.
+- Read the [Running a Miner Guide] to get started.
+- Configure your miner to participate in the EarthMind testnet.
 - Monitor your performance and optimize for better rewards.
 - Connect with other miners in our Discord channel for tips and support.
 
 ### If you are a validator:
-- Study the [Validator Guide] to understand your role.
+- Read the [Running a Validator Guide] to get started.
 - Set up your validator node following our detailed instructions.
-- Participate in network governance and ensure network security.
+- Participate in the EarthMind testnet.
 - Engage with the validator community to stay updated on best practices.
 
 ### If you are an AVS operator:
-- Explore the [AVS Operator Guide] to learn about AVS integration.
-- Implement the necessary configurations to support EigenLayer AVS.
+- Read the [Becoming an AVS Operator Guide] to get started.
+- Setup your AVS node and participate in the EarthMind testnet.
 - Ensure your AVS is securely connected and operational.
 - Collaborate with other AVS operators to enhance network resilience.
 
@@ -125,3 +125,6 @@ In summary, EarthMind matters because it brings efficiency, security, scalabilit
 [Yuma consensus]: https://docs.bittensor.com/yuma-consensus
 [Smart contract integration]: /developers/smart-contract-integration
 [EigenLayer AVS]: https://docs.eigenlayer.xyz/eigenlayer/avs-guides/avs-developer-guide
+[Running a Miner Guide]: /guides/running-a-miner
+[Running a Validator Guide]: /guides/running-a-validator
+[Becoming an AVS Operator Guide]: /guides/becoming-avs-operator
