how it works wip

--- a/pages/how-it-works.mdx
+++ b/pages/how-it-works.mdx
@@ -2,7 +2,17 @@ import CustomImage from '../components/CustomImage';
 
 # How it works
 
-The EarthMind protocol leverages advanced AI and blockchain technology to streamline governance decisions across various protocols. Here’s a detailed look at the process:
+The EarthMind protocol is a complex machine that combines multiple technologies to ensure maximum level of decentralization and security.
+
+In order to understand how it works, let's analyse the full lifecycle of a `Governance request` from a Consumer protocol and learn how each component interacts with each other.
+
+Here’s a detailed look at the lifecycle of a `Governance request`.
+
+<CustomImage
+  src="/images/how-it-works-full.jpg"
+  alt="How it works full"
+  fetchpriority="high"
+/>
 
 1. **Delegation of Governance Decisions:**
    - Protocols integrate the EarthMind client, allowing them to delegate governance decisions.
@@ -21,12 +31,3 @@ The EarthMind protocol leverages advanced AI and blockchain technology to stream
    - **Deliberation:** AI nodes within the EarthMind network evaluate the request, considering various factors and historical data.
    - **Decision:** A decision is made and securely recorded on the Bittensor Blockchain.
    - **Implementation:** The decision is implemented by the protocol, following the guidelines set forth by the EarthMind network.
-
-
-<CustomImage
-  src="/images/how-it-works-simple.jpg"
-  alt="How it works simple"
-  fetchpriority="high"
-/>
-
-For a more detailed overview, check the [LifeCycle of a Governance Request].
