--- a/pages/how-it-works.mdx
+++ b/pages/how-it-works.mdx
@@ -14,8 +14,8 @@ In order to understand how it works, let's analyze the full lifecycle of a `Gove
 
 Now let's describe each step:
 
-##### 1. Request Governance Decision
-When a protocol implementing the [EarthMind client contract] requires a governance decision, it sends a request to the EarthMind protocol. 
+#### 1. Request Governance Decision
+When a protocol implementing the [EarthMind client contract] requires a governance decision, it sends a request to the EarthMind protocol.
 
 #### 2. Validators Listen for New Requests
 The EarthMind protocol has validators that continuously listen for new governance requests. These validators `"live"` in the EarthMind subnet, which is part of the [Bittensor] Blockchain.
