--- a/pages/how-it-works.mdx
+++ b/pages/how-it-works.mdx
@@ -4,7 +4,9 @@ import CustomImage from '../components/CustomImage';
 
 The EarthMind protocol is a complex machine that combines multiple technologies to ensure a maximum level of decentralization and security.
 
-In order to understand how it works, let's analyze the full lifecycle of a `Governance request` from a Consumer protocol and learn how each component interacts with each other. The following image illustrates this process:
+In order to understand how it works, let's analyze the full lifecycle of a `Governance request` from a Consumer protocol and learn how each component interacts with each other. 
+
+The following image illustrates this process:
 
 <CustomImage
   src="/images/how-it-works-full.jpg"
